# cxx-mutant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cxx-mutant-spec.md  migration-from-marmorkrebs.md  mutators.md  stryker-integration.md
src/cxx_mutant/: __init__.py  cli.py  engine.py  schema.py
tests/: test_schema_contracts.py
