[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxx-mutant"
description = "Standalone C++/ObjC++ source mutation CLI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mutation testing", "c++", "cpp", "stryker", "clang", "coverage", "mutation"]
version = "0.1.1"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]
urls = { "Home" = "https://github.com/openclaw/cxx-mutant", "Issues" = "https://github.com/openclaw/cxx-mutant/issues" }

authors = [{ name = "OpenClaw contributors" }]

[project.scripts]
cxx-mutant = "cxx_mutant.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
